# vdf

./: .gitignore  Cargo.toml  LICENSE  README.md  bot simulation test result.txt  build.sh  demo.html  fix-dependencies.sh  package-lock.json  package.json  serve.js  simple-demo.html  tsconfig.json  tslint.json  vdf.js  vdf.wasm
.cargo/: config.toml
fresh_target/: .future-incompat-report.json  .rustc_info.json
fresh_target/debug/.fingerprint/autocfg-b6b224d813e111e1/: lib-autocfg  lib-autocfg.json
fresh_target/debug/.fingerprint/libc-62a5313eedf64efd/: build-script-build-script-build  build-script-build-script-build.json
fresh_target/debug/.fingerprint/num-traits-717af100fe36f4a7/: build-script-build-script-build  build-script-build-script-build.json
fresh_target/debug/.fingerprint/typenum-b2db111e3e676d69/: build-script-build-script-build  build-script-build-script-build.json
fresh_target/debug/.fingerprint/vdf-d12356195a20a801/: build-script-build-script-build  build-script-build-script-build.json  output-build-script-build-script-build
fresh_target/wasm32-unknown-emscripten/debug/: vdf.d  vdf.js  vdf.wasm
fresh_target/wasm32-unknown-emscripten/debug/.fingerprint/digest-0cf0bf7006c4b1d8/: lib-digest  (+1 more)
scripts/: patch-vdf-export.js
src/: bytes_allocation.js  index.ts  index.ts.backup  main.rs  performance-test.js  test.ts  vdf-worker.js  vdf.js  vdf.js.backup
src/gmp/: config.h.patch
src/types/: global.d.ts  vdf.d.ts
tests/: basic.ts  bot-simulation.ts  production.ts  verification-test.js  verification-test.ts
vercel-app/: index.html  vercel.json
(+37 files in other folders)
