[package]
name = "vdf"
version = "0.1.0"
authors = ["Nazar Mokrynskyi <nazar@mokrynskyi.com>"]
edition = "2021"

[dependencies]
vdf = "0.1"
classgroup = "0.1"
sha2 = "0.10"
num-traits = "0.2"

primal = "0.3"

# Memory optimization for WebAssembly
[profile.release]
opt-level = "s"        # Optimize for size
lto = true            # Link-time optimization
codegen-units = 1     # Better optimization
panic = "abort"       # Smaller binary size

[profile.dev]
opt-level = 1         # Some optimization even in dev
overflow-checks = true # Safety checks
